fix paste and info text overlap

--- a/style.css
+++ b/style.css
@@ -44,9 +44,15 @@ a:hover {
     text-decoration: underline;
 }
 
-p {
+p[name=info] {
     position: absolute;
-    bottom: 0%;
+    bottom: 0;
+    left: 1%;
+    z-index: 1;
+}
+
+p[name=paste-info] {
+    position: relative;
     left: 1%;
     z-index: 1;
 }
